--- a/16. web_project/web_project.html
+++ b/16. web_project/web_project.html
@@ -28,7 +28,9 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
     <div class="container">
       <a class="navbar-brand fw-bold nav-link-custom" href="#projects-section" data-target="projects">SoftWill</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto align-items-center">
           <li class="nav-item"><a class="nav-link nav-link-custom active" href="#projects-section" data-target="projects">Proyek</a></li>
@@ -50,66 +52,16 @@
         <h1 class="text-center mb-5">Semua Proyek</h1>
         <div class="row g-4">
           <!-- 10 Proyek -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 1</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 2</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 3</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 4</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 5</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 6</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 7</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 8</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 9</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-folder"></i> Proyek 10</div>
-              <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-            </div>
-          </div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 1</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 2</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 3</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 4</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 5</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 6</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 7</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 8</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 9</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
+          <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 10</div><a href="#" class="project-link" target="_blank">Lihat Proyek</a></div></div>
         </div>
       </div>
     </section>
@@ -121,18 +73,14 @@
         <div class="row g-4">
           <div class="col-12 col-md-6">
             <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-star-fill text-warning"></i> Portofolio Website 
-                <span class="popular-badge"><i class="bi bi-fire"></i> Populer</span>
-              </div>
+              <div class="project-title"><i class="bi bi-star-fill text-warning"></i> Portofolio Website <span class="popular-badge"><i class="bi bi-fire"></i> Populer</span></div>
               <a href="#" class="project-link">Lihat Proyek</a>
               <p class="mt-2 mb-0 text-muted">Website portofolio Bootstrap 5 dengan dark mode.</p>
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="smooth-card p-3 h-100">
-              <div class="project-title"><i class="bi bi-star-fill text-warning"></i> Aplikasi To-Do List 
-                <span class="popular-badge"><i class="bi bi-fire"></i> Populer</span>
-              </div>
+              <div class="project-title"><i class="bi bi-star-fill text-warning"></i> Aplikasi To-Do List <span class="popular-badge"><i class="bi bi-fire"></i> Populer</span></div>
               <a href="#" class="project-link">Lihat Proyek</a>
               <p class="mt-2 mb-0 text-muted">Aplikasi manajemen tugas dengan JavaScript.</p>
             </div>
@@ -195,9 +143,25 @@
       links.forEach(l=>l.classList.remove("active"));
       el.classList.add("active");
     }
+    function closeNavbar(){
+      const nav=document.getElementById('navbarNav');
+      const bsCollapse = bootstrap.Collapse.getInstance(nav);
+      if(bsCollapse){ bsCollapse.hide(); }
+    }
     links.forEach(l=>l.addEventListener("click",e=>{
-      e.preventDefault(); showSection(l.dataset.target,l);
+      e.preventDefault(); 
+      showSection(l.dataset.target,l);
+      closeNavbar(); // auto close di mobile
     }));
+
+    // klik logo juga menutup navbar
+    document.querySelector(".navbar-brand").addEventListener("click",e=>{
+      e.preventDefault();
+      showSection("projects",document.querySelector("a[data-target='projects']"));
+      closeNavbar();
+    });
+
+    // default halaman awal
     showSection("projects",document.querySelector("a[data-target='projects']"));
   </script>
 </body>
