--- a/16. web_project/web_project.html
+++ b/16. web_project/web_project.html
@@ -24,9 +24,7 @@
       background: transparent;
       box-shadow: none;
     }
-    .smooth-card:hover {
-      background: #f8f9fa;
-    }
+    .smooth-card:hover { background: #f8f9fa; }
     @keyframes fadeIn { to { opacity:1; transform:none; } }
 
     .project-title { font-weight: 500; font-size: 1rem; display:flex; align-items:center; gap:.5rem; }
@@ -40,6 +38,7 @@
     
     .popular-badge { background:#ffc107; padding:2px 8px; border-radius:12px; font-size:.75em; margin-left:10px; }
     .dark-toggle-btn { border:none; background:none; color:#fff; font-size:1.3rem; margin-left:.5rem; cursor:pointer; }
+    #datetime { font-size: 0.95rem; color: #6c757d; margin-top:-10px; }
   </style>
 </head>
 <body>
@@ -68,7 +67,10 @@
     <!-- Semua Proyek -->
     <section id="projects-section">
       <div class="container">
-        <h1 class="text-center mb-4">Semua Proyek</h1>
+        <h1 class="text-center mb-2">Semua Proyek</h1>
+        <!-- Tanggal & Waktu -->
+        <p id="datetime" class="text-center"></p>
+        <hr class="mb-4">
         <div class="row">
           <!-- 10 Proyek -->
           <div class="col-12 col-md-6 col-lg-4"><div class="smooth-card"><div class="project-title"><i class="bi bi-folder"></i> Proyek 1</div><a href="#" class="project-link">Lihat Proyek</a></div></div>
@@ -85,7 +87,7 @@
       </div>
     </section>
 
-    <!-- Proyek Populer -->
+    <!-- Populer -->
     <section id="popular-section">
       <div class="container">
         <h1 class="text-center mb-4">Proyek Populer</h1>
@@ -170,7 +172,7 @@
     links.forEach(l=>l.addEventListener("click",e=>{
       e.preventDefault(); 
       showSection(l.dataset.target,l);
-      closeNavbar(); // auto close di mobile
+      closeNavbar();
     }));
     document.querySelector(".navbar-brand").addEventListener("click",e=>{
       e.preventDefault();
@@ -180,6 +182,20 @@
 
     // default halaman awal
     showSection("projects",document.querySelector("a[data-target='projects']"));
+
+    // Waktu realtime
+    function updateDateTime(){
+      const now = new Date();
+      const hari = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
+      const bulan = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
+      const h = String(now.getHours()).padStart(2,'0');
+      const m = String(now.getMinutes()).padStart(2,'0');
+      const s = String(now.getSeconds()).padStart(2,'0');
+      const waktu = `${hari[now.getDay()]}, ${now.getDate()} ${bulan[now.getMonth()]} ${now.getFullYear()} - ${h}:${m}:${s}`;
+      document.getElementById("datetime").textContent = waktu;
+    }
+    setInterval(updateDateTime,1000);
+    updateDateTime();
   </script>
 </body>
 </html>
