--- a/16. web_project/web_project.html
+++ b/16. web_project/web_project.html
@@ -15,8 +15,6 @@
       padding-top: 56px;
       transition: background 0.3s, color 0.3s;
       scroll-behavior: smooth;
-      background: #ffffff;
-      color: #212529;
     }
     main { flex: 1 0 auto; }
     section {
@@ -60,14 +58,14 @@
     body.dark-mode .project-divider, body.dark-mode hr { border-top-color: #495057; }
     body.dark-mode footer { background: #181a1b; color: #f8f9fa; }
     .dark-toggle-btn {
-      border: none; background: none; font-size: 1.3rem; margin-left: .5rem;
-      cursor: pointer; transition: color 0.3s;
+      border: none; background: none; color: #fff;
+      font-size: 1.3rem; margin-left: .5rem; cursor: pointer; transition: color 0.3s;
     }
-    .navbar { transition: background 0.3s, color 0.3s; background: #f8f9fa !important; }
-    .navbar .nav-link, .navbar .navbar-brand { color: #212529 !important; }
-    footer { background: #f8f9fa; color: #212529; }
+    body.dark-mode .dark-toggle-btn { color: #f8f9fa; }
+    .navbar { transition: background 0.3s, color 0.3s; }
     body.dark-mode .navbar { background: #181a1b !important; }
-    body.dark-mode .navbar .nav-link, body.dark-mode .navbar .navbar-brand { color: #f8f9fa !important; }
+    .navbar-nav .nav-link { font-size: 1rem; }
+    footer#contact { width: 100%; background: #181a1b; color: #f8f9fa; text-align: center; }
     @media (max-width: 767.98px) {
       section { padding: 32px 0; }
       h1, h2 { font-size: 1.5rem; }
@@ -83,7 +81,7 @@
 </head>
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg fixed-top shadow">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
     <div class="container">
       <a class="navbar-brand fw-bold nav-link-custom" href="#projects-section" data-target="projects">SoftWill</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -111,12 +109,56 @@
         <p class="text-center project-time" id="currentDateTime"></p>
         <hr>
 
-        <div class="row g-3" id="projects-container">
-          <!-- Proyek akan ditambahkan lewat JS -->
-        </div>
-
-        <div class="text-center mt-4">
-          <button id="loadMoreBtn" class="btn btn-primary">Tampilkan Lebih Banyak</button>
+        <div class="row g-3">
+          <!-- Ulangi card proyek -->
+          <div class="col-md-4 col-sm-6">
+            <div class="smooth-card p-3 h-100">
+              <div class="project-title"><i class="bi bi-folder"></i> Kalkulator Tahanan</div>
+              <a href="../1.kalkulator_hambatan_konduktor/hk_index.html" class="project-link" target="_blank">Lihat Proyek</a>
+              <div class="project-divider"></div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="smooth-card p-3 h-100">
+              <div class="project-title"><i class="bi bi-folder"></i> Kalkulator Tahanan 2</div>
+              <a href="..//2.kalkulator_hambatan_trial_withTCU/Kalkulator_hambatan_trial_withTCU.html" class="project-link" target="_blank">Lihat Proyek</a>
+              <div class="project-divider"></div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="smooth-card p-3 h-100">
+              <div class="project-title"><i class="bi bi-folder"></i> konverter hambatan IR</div>
+              <a href="..//3.konverter_hambatan_IR/konverter_hambatan_ir.html" class="project-link" target="_blank">Lihat Proyek</a>
+              <div class="project-divider"></div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> konverter_panjang</div><a href="..//4.konverter_panjang/konverter_panjang.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> kalkulator_dimensi</div><a href="..//5.kalkulator_dimensi/kalkulator_dimensi.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> yusup chots</div><a href="..//6.yusup/chots_fix_banget.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> hitungpanjangkabel_didrum</div><a href="..//7.hitungpanjangkabel_didrum/hitungpanjangkabel_didrum.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> uji_tekuk_bending_fix</div><a href="..//8.uji_tekuk_bending_fix/8.uji_tekuk_bending_fix.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> oldbending_test</div><a href="..//9.coldbending_test/coldbending_test.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> heatshock_test</div><a href="..//10.heatshock_test/heatshock_test.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> kalkulator_resistor</div><a href="..//11.kalkulator_resistor/kalkulator_resistor.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> android_kw</div><a href="..//12.android_kw/android_kw.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> generator_angka</div><a href="..//13. generator_angka/generator_angka.html" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 14</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 15</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 16</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 17</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 18</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 19</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 20</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 21</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 22</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 23</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 24</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 25</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 26</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 27</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 28</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 29</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
+          <div class="col-md-4 col-sm-6"><div class="smooth-card p-3 h-100"><div class="project-title"><i class="bi bi-folder"></i> Proyek 30</div><a href="#" class="project-link">Lihat Proyek</a><div class="project-divider"></div></div></div>
         </div>
       </div>
     </section>
@@ -187,19 +229,8 @@
         localStorage.setItem('darkMode', 'off');
       }
     }
-    window.addEventListener('DOMContentLoaded', ()=>{
-      const saved = localStorage.getItem('darkMode');
-      if(saved){
-        setDarkMode(saved==='on');
-      } else {
-        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        setDarkMode(prefersDark);
-      }
-    });
-    darkToggleBtn.addEventListener('click', e=>{
-      e.stopPropagation();
-      setDarkMode(!body.classList.contains('dark-mode'));
-    });
+    darkToggleBtn.addEventListener('click', (e)=>{e.stopPropagation(); setDarkMode(!body.classList.contains('dark-mode'));});
+    window.addEventListener('DOMContentLoaded', ()=>{if(localStorage.getItem('darkMode')==='on') setDarkMode(true);});
 
     // Navbar & section switching
     const sections = {
@@ -241,8 +272,10 @@
 
     // EmailJS init
     (function(){ emailjs.init("NJZHmQ8Fgjg2mx0ov"); })();
+
     const form = document.getElementById("contactForm");
     const formStatus = document.getElementById("form-status");
+
     form.addEventListener("submit", function(e){
       e.preventDefault();
       formStatus.innerHTML = "⏳ Mengirim pesan...";
@@ -251,40 +284,6 @@
         .then(()=>{ formStatus.innerHTML="✅ Pesan berhasil dikirim!"; formStatus.classList.add("text-success"); form.reset(); })
         .catch(err=>{ formStatus.innerHTML="❌ Gagal mengirim pesan."; formStatus.classList.add("text-danger"); console.error(err); });
     });
-
-    // PROYEK: tampil 100 tapi load 20 per klik
-    const totalProjects = 100;
-    const projectsPerPage = 20;
-    let currentIndex = 0;
-    const container = document.getElementById('projects-container');
-    const loadMoreBtn = document.getElementById('loadMoreBtn');
-
-    function createProjectCard(index){
-      const col = document.createElement('div');
-      col.className = "col-md-4 col-sm-6";
-      col.innerHTML = `
-        <div class="smooth-card p-3 h-100">
-          <div class="project-title"><i class="bi bi-folder"></i> Proyek ${index}</div>
-          <a href="#" class="project-link" target="_blank">Lihat Proyek</a>
-          <div class="project-divider"></div>
-        </div>
-      `;
-      return col;
-    }
-
-    function loadProjects(){
-      const nextIndex = Math.min(currentIndex + projectsPerPage, totalProjects);
-      for(let i=currentIndex+1; i<=nextIndex; i++){
-        container.appendChild(createProjectCard(i));
-      }
-      currentIndex = nextIndex;
-      if(currentIndex >= totalProjects){
-        loadMoreBtn.style.display = "none";
-      }
-    }
-
-    loadProjects();
-    loadMoreBtn.addEventListener("click", loadProjects);
   </script>
 </body>
 </html>
